# ============================================
# Assignment 3 / SecureBank / Bank Management System
# Basic pyproject.toml (PEP 621 Compliant)
# ============================================

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-mgmt-system"
version = "0.1.0"
description = "SecureBank subsystem with domain, services, persistence, routing, and CLI menu."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Joseph Bevels", email = "n00661116@unf.edu" }
]

# Runtime dependencies
dependencies = [
    "numpy",
    "pandas",
]

# Development-only dependencies
[project.optional-dependencies]
dev = [
    "pytest",
]

# Optional CLI entry point
# [project.scripts]
# securebank = "main:secure_banking_menu"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


